# ningen-shikkaku

./: .gitignore  README.md  book.toml  deadman.py  dist-workspace.toml  heartbeat.py  python-reference.md  secmem.py  server.json  shellrc.sh  smithery.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: README.md  burn.tape  burn_once.py
docs/launch/: checklist.md  registries.md  show-hn.md
docs/src/: SUMMARY.md  how-it-works.md  index.md  kill-sequence.md  threat-model.md  what-it-is.md
docs/src/assets/: hero.glb
docs/src/components/: dazai.md  goodnight.md  kekkai.md  kikka.md  motokano.md  rei.md  sienna.md
docs/src/guides/: linux.md  mcp-integration.md  quickstart.md  red-team.md
docs/src/reference/: config.md  limitations.md  mcp-tools.md  protocol.md
docs/superpowers/plans/: 2026-06-11-dazai-0to1-launch.md
docs/superpowers/specs/: 2026-06-11-dazai-0to1-launch-design.md
docs/theme/css/: variables.css
rs/: Cargo.toml  README.md  dist-workspace.toml
rs/crates/dazai/: Cargo.toml
rs/crates/dazai-child/: Cargo.toml
rs/crates/dazai-child/src/: lib.rs
rs/crates/dazai-child/tests/: child.rs
rs/crates/dazai-mcp/: Cargo.toml
rs/crates/dazai-mcp/src/: lib.rs
rs/crates/dazai-mcp/tests/: mock_daemon.rs
rs/crates/dazai-oneshot/: Cargo.toml
rs/crates/dazai-oneshot/src/: dazai.rs  lib.rs  main.rs  server.rs  tools.rs
rs/crates/dazai-oneshot/tests/: counter.rs  lifecycle.rs
rs/crates/dazai-seccomp/: Cargo.toml
rs/crates/dazai-seccomp/src/: lib.rs
rs/crates/dazai-seccomp/tests/: allowlist.rs
rs/crates/dazai-secmem/: Cargo.toml
rs/crates/dazai-secmem/src/: lib.rs
rs/crates/dazai-secmem/tests/: secmem.rs
rs/crates/dazai-watchdog/: Cargo.toml
rs/crates/dazai-watchdog/src/: lib.rs  panic.rs
rs/crates/dazai-watchdog/tests/: panic_controller.rs
rs/crates/dazai/src/: main.rs
rs/crates/dazai/tests/: integration.rs
rs/crates/goodnight/: Cargo.toml
rs/crates/goodnight/tests/: secmem.rs
rs/crates/kekkai/: Cargo.toml
rs/crates/kekkai/src/: lib.rs
rs/crates/kekkai/tests/: allowlist.rs
rs/crates/kikka/: Cargo.toml
rs/crates/kikka/src/: lib.rs  panic.rs
rs/crates/kikka/tests/: panic_controller.rs
rs/crates/motokano/: Cargo.toml
rs/crates/motokano/src/: counter.rs  dazai.rs  lib.rs  main.rs  server.rs  tools.rs
rs/crates/motokano/tests/: counter.rs  lifecycle.rs
rs/crates/rei/: Cargo.toml
rs/crates/rei/src/: lib.rs
rs/crates/rei/tests/: mock_daemon.rs
rs/crates/sienna/: Cargo.toml
rs/crates/sienna/src/: lib.rs
rs/crates/sienna/tests/: child.rs
tests/: test_deadman.py  test_secmem.py
