[workspace]
resolver = "2"
members = [
    "crates/dazai",
    "crates/goodnight",
    "crates/kikka",
    "crates/kekkai",
    "crates/sienna",
    "crates/rei",
    "crates/motokano",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "dazai Phase 2 — hardened Rust dead-man's-switch daemon"

[workspace.dependencies]
libc = "0.2"
anyhow = "1"
signal-hook = "0.3"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.3", features = ["server", "macros", "schemars", "transport-io"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "process"] }

# Internal crates
goodnight = { path = "crates/goodnight" }
kikka = { path = "crates/kikka" }
sienna = { path = "crates/sienna" }
kekkai = { path = "crates/kekkai" }
rei = { path = "crates/rei" }

[profile.release]
panic = "abort"
