[package]
name = "dazai-oneshot"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Self-immolating MCP server: serve N tool calls, then wipe state and exit"

[[bin]]
name = "dazai-oneshot"
path = "src/main.rs"

[dependencies]
dazai-secmem.workspace = true
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json = "1"
schemars.workspace = true
tokio.workspace = true
