[package]
name = "dazai"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "dazai Phase 2 CLI — hardened dead-man's-switch daemon"

[[bin]]
name = "dazai"
path = "src/main.rs"

[dependencies]
goodnight.workspace = true
kikka.workspace = true
sienna.workspace = true
kekkai.workspace = true
rei.workspace = true
anyhow.workspace = true
clap.workspace = true
signal-hook.workspace = true
tokio.workspace = true

[features]
# Enable on Linux to compile and apply the seccomp allowlist.
seccomp = ["kekkai/seccomp"]
