[package]
name = "kekkai"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "seccomp syscall allowlist for the dazai watchdog (Linux only, feature-flagged)"

[dependencies]
anyhow.workspace = true

# libseccomp is a Linux-only system library; only pulled in on Linux when the
# `seccomp` feature is enabled. On macOS the crate compiles to a no-op stub.
[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = { version = "0.3", optional = true }

[features]
seccomp = ["dep:libseccomp"]
