[package]
name = "rei"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MCP server exposing the dazai daemon as tools any agent can use"

[dependencies]
goodnight.workspace = true
anyhow.workspace = true
signal-hook.workspace = true
rmcp.workspace = true
serde.workspace = true
schemars.workspace = true
tokio.workspace = true
